samples/_failures_safe/1761186826_08e443_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_533c3a90.c: In function ‘tokenize’:
./samples/SAFE/__tmp_533c3a90.c:158:13: error: expected expression at end of input
  158 |             tokens[token_count].column =
      |             ^~~~~~
./samples/SAFE/__tmp_533c3a90.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_533c3a90.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_533c3a90.c:158:13: error: expected declaration or statement at end of input
